cspm/cspm-platform/services/inventory-collector/output/588989875114/ap-southeast-2/ec2_150/describe_network_acls/describe_network_acls_output_20250603_145514.json
{
  "NetworkAcls": [
    {
      "Associations": [
        {
          "NetworkAclAssociationId": "aclassoc-2dc6a549",
          "NetworkAclId": "acl-1e7dbc7b",
          "SubnetId": "subnet-16652f50"
        },
        {
          "NetworkAclAssociationId": "aclassoc-4a7bce2f",
          "NetworkAclId": "acl-1e7dbc7b",
          "SubnetId": "subnet-453ced20"
        },
        {
          "NetworkAclAssociationId": "aclassoc-557bce30",
          "NetworkAclId": "acl-1e7dbc7b",
          "SubnetId": "subnet-2b916f5c"
        }
      ],
      "Entries": [
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        }
      ],
      "IsDefault": true,
      "NetworkAclId": "acl-1e7dbc7b",
      "Tags": [],
      "VpcId": "vpc-60eb1005",
      "OwnerId": "588989875114"
    }
  ],
  "ResponseMetadata": {
    "RequestId": "534a1038-af1b-415c-a7cc-9f4457d4e041",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "534a1038-af1b-415c-a7cc-9f4457d4e041",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "content-type": "text/xml;charset=UTF-8",
      "content-length": "1501",
      "date": "Tue, 03 Jun 2025 14:55:27 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
